Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,8 @@ citestyle=numeric-comp,
 
 \begin{abstract}
 ... ABSTRACT GOES HERE...
+This abstract will get nobody's attention for sure.
+It got my attention!
 \end{abstract}
 \begin{document}
 
@@ -41,7 +43,7 @@ Blah, blah I like sleep.
 
 \section*{Methods}
 \subsection{SUBSECTION HEADER GOES HERE}
-We ran a sleep study and used a t-test \cite{students_t_1908}.
+We ran a sleep study and used a t-test \cite{students_t_1908} and here is the figure that shows the results \ref{fig:FIGURE1_LABEL}
 
 \section*{Results}
 \input{results/Results.tex}
