--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6,3 +6,14 @@
   year={1908},
   publisher={JSTOR}
 }
+@article{Westlye2010,
+author = {Westlye, Lars T and Walhovd, Kristine B and Dale, Anders M and Bj{\o}rnerud, Atle and Due-T{\o}nnessen, Paulina and Engvig, Andreas and Grydeland, H{\aa}kon and Tamnes, Christian K and Ostby, Ylva and Fjell, Anders M},
+doi = {10.1093/cercor/bhp280},
+issn = {1460-2199},
+journal = {Cerebral cortex (New York, N.Y. : 1991)},
+pages = {2055--2068},
+pmid = {20032062},
+title = {{Life-span changes of the human brain white matter: diffusion tensor imaging (DTI) and volumetry.}},
+volume = {20},
+year = {2010}
+}
