Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@ It got my attention!
 
 \section*{Introduction}
 \subsection{SUBSECTION HEADER GOES HERE}
-Blah, blah I like sleep.
+Blah, blah I like sleep. X\textsuperscript{2}. 
 
 \section*{Methods}
 \subsection{SUBSECTION HEADER GOES HERE}
@@ -50,7 +50,7 @@ We ran a sleep study and used a t-test \cite{students_t_1908} and here is the fi
 
 \section*{Discussion}
 \subsection{SUBSECTION HEADER GOES HERE}
-Blah, blah I still like sleep, but....
+Blah, blah I still like sleep, but.... \cite{Westlye2010}
 
 \printbibliography{}
 
@@ -58,6 +58,7 @@ Blah, blah I still like sleep, but....
 
 \section*{Author contributions statement}
 
+\printbibliography{}
 \begin{figure}
 \centering
 \includegraphics[width=\linewidth, angle=0, scale=1.0, keepaspectratio=true]{figures/SAMPLE_FIGURE_1.png}
@@ -71,12 +72,5 @@ Blah, blah I still like sleep, but....
 \caption{FIGURE2 CAPTION}
 \label{fig:FIGURE2_LABEL}
 \end{figure}
-
-%\begin{table}[ht]
-%    \centering
-%    \input{results/TABLE1.tex}
-%    \caption{TABLE1 CAPTION}
-%    \label{tab:TABLE1_LABEL}
-%\end{table}
 
 \end{document}
