--- a/results/results.tex
+++ b/results/results.tex
@@ -20,6 +20,7 @@
 \IfFileExists{microtype.sty}{% use microtype if available
   \usepackage[]{microtype}
   \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+  Change to R notebook
 }{}
 \makeatletter
 \@ifundefined{KOMAClassName}{% if non-KOMA class
